engine/baml/baml/tests/validation_files/class/unknown_type.baml
class InterfaceTwo {
  interface String
  prop2 Foo
}

// error: Type "Foo" is neither a built-in type, nor refers to another model, custom type, or enum.
//   -->  /Users/aaronvillalpando/Projects/gloo-lang/engine/baml/baml/tests/validation_files/class/unknown_type.baml:3
//    | 
//  2 |   interface String
//  3 |   prop2 Foo
//    | 
